<resources>
    <string name="app_name">Friendly Food Finder</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="scan_barcodes">Scan Barcodes</string>
    <string name="plan_meals">Plan Meals</string>
    <string name="manage_families">Manage Families</string>
    <string name="user_info">Update User Info</string>
    <string name="title_activity_manage_families">ManageFamilies</string>
    <string name="title_activity_scanbarcode_activity">Scan Barcodes</string>
    <string name="title_activity_create_user">CreateUser</string>
    <string name="enter_username">Enter Username</string>
    <string name="title_activity_select_allergies">SelectAllergies</string>
    <string name="allergen_peanut">Allergen: Peanuts</string>
    <string name="allergen_tree_nut">Allergen: Tree Nuts</string>
    <string name="allergen_soy">Allergen: Soy</string>
    <string name="allergen_egg">Allergen: Eggs</string>
    <string name="allergen_shellfish">Allergen: Shellfish</string>
    <string name="allergen_color_added">Allergen:  Color Added</string>
</resources>
