<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:showIn="@layout/activity_select_allergies"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".SelectAllergies">

    <!--<TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/text_margin"
            android:text="@string/large_text"/>-->

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <CheckBox
                android:text="@string/allergen_peanut"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/checkBox8"
                android:layout_marginTop="64dp"
                app:layout_constraintTop_toBottomOf="@+id/checkBox3" android:layout_marginBottom="64dp"
                app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp"/>
        <CheckBox
                android:text="@string/allergen_tree_nut"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/checkBox7"
                android:layout_marginTop="64dp"
                app:layout_constraintTop_toBottomOf="@+id/checkBox6" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp"/>
        <CheckBox
                android:text="@string/allergen_soy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/checkBox6"
                android:layout_marginTop="64dp"
                app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp"/>
        <CheckBox
                android:text="@string/allergen_egg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/checkBox5"
                android:layout_marginTop="64dp"
                app:layout_constraintTop_toBottomOf="@+id/checkBox4" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp"/>
        <CheckBox
                android:text="@string/allergen_shellfish"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/checkBox4"
                android:layout_marginTop="64dp"
                app:layout_constraintTop_toBottomOf="@+id/checkBox7" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp"/>
        <CheckBox
                android:text="@string/allergen_color_added"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/checkBox3"
                android:layout_marginTop="64dp"
                app:layout_constraintTop_toBottomOf="@+id/checkBox5" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp"
        />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>